Fix link size on mobile
- refac media query

--- a/src/scss/components/_dropdown.scss
+++ b/src/scss/components/_dropdown.scss
@@ -307,26 +307,20 @@
   }
 }
 .menu {
+  --menu-small-link-font-size-mobile: 1.125rem; //18px
+  a.small-link {
+    font-size: var(--menu-small-link-font-size-mobile);
+  }
   .sub-menu {
     .forward-arrow-small {
       &:after {
         display: none;
-      }
-      @media only screen and (min-width: $breakpoint-large) {
-        &:after {
-          display: block;
-        }
       }
     }
   }
   > li {
     > a {
       padding-left: var(--spacer-xx-small);
-    }
-    @media only screen and (min-width: $breakpoint-large) {
-      > a {
-        padding-left: 0;
-      }
     }
   }
   &--right {
@@ -371,17 +365,32 @@
     .disclosure-panel {
       margin: 0 var(--spacer-xxx-small);
       padding: 0 var(--spacer-xxx-small);
-
       > * {
         margin-top: 0;
-      }
-
-      @media only screen and (min-width: $breakpoint-large) {
-        margin: 0 var(--spacer-medium);
       }
     }
   }
   @media only screen and (min-width: $breakpoint-large) {
+    a.small-link {
+      font-size: $font-size-body;
+    }
+    .sub-menu {
+      .forward-arrow-small {
+        &:after {
+          display: block;
+        }
+      }
+    }
+    > li {
+      > a {
+        padding-left: 0;
+      }
+    }
+    .disclosure-no-border {
+      .disclosure-panel {
+        margin: 0 var(--spacer-medium);
+      }
+    }
     & + .border {
       > li:first-child {
         border-top: $border-width-small solid var(--color-mt-lighter-light-blue);
